# diagrams-heatmap

./: .gitignore  README.md  diagrams-heatmap.cabal
example/: example.hs
src/Diagrams/: HeatMap.hs
src/Diagrams/HeatMap/: Dendrogram.hs  Impl.hs  Internal.hs  Module.hs  Type.hs  Unsafe.hs  Util.hs
tests/: colorBar.hs  mkHeatmap.hs
