name:                diagrams-heatmap
version:             0.1.0.0
synopsis:            Hierarchical Clustering Heatmaps
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Boyun Tang
maintainer:          tangboyun@hotmail.com
stability:           alpha
-- copyright:           
category:            Bioinformatics, Graphics
build-type:          Simple
Cabal-version:       >= 1.18
data-files:          

library
  hs-source-dirs:      src

  exposed-modules:     Diagrams.HeatMap
                       Diagrams.HeatMap.Type
                       Diagrams.HeatMap.Internal
--                       Diagrams.HeatMap.Util
  
  other-modules:       Diagrams.HeatMap.Module
                       Diagrams.HeatMap.Impl
                       Diagrams.HeatMap.Unsafe
                       
  build-depends:       base,
                       cairo ,
                       colour,
                       diagrams ,
                       diagrams-lib,
                       directory,
                       hierarchical-clustering,
                       hierarchical-clustering-diagrams,
                       split,
--                       statistics,
                       text ,
                       vector,
                       unordered-containers,
                       lens,
                       data-default-class
                       
  ghc-options:         -Wall
