name:                diagrams-heatmap
version:             0.1.0.0
synopsis:            Hierarchical Clustering Heatmaps
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Boyun Tang
maintainer:          tangboyun@hotmail.com
stability:           alpha
-- copyright:           
category:            Bioinformatics, Graphics
build-type:          Simple
Cabal-version:       >= 1.18
data-files:          

library
  hs-source-dirs:      src

  exposed-modules:     Diagrams.HeatMap
                       Diagrams.HeatMap.Type
                       Diagrams.HeatMap.Internal
  
  other-modules:       Diagrams.HeatMap.Module
                       Diagrams.HeatMap.Impl
                       Diagrams.HeatMap.Unsafe
                       Diagrams.HeatMap.Dendrogram
                       
  build-depends:       base,
                       cairo ,
                       colour,
                       diagrams-lib >= 1.2 ,
                       directory,
                       hierarchical-clustering,
                       split,
                       text ,
                       vector,
                       unordered-containers,
                       lens,
                       data-default-class
                       
  ghc-options:         -Wall

executable colorBar
  main-is:             colorBar.hs
  build-depends:       base >=4.7 && < 5,
                       diagrams-cairo,
                       diagrams-heatmap,
                       diagrams-lib,
                       colour,
                       IntervalMap,
                       palette

  hs-source-dirs:      tests
  default-language:    Haskell2010

executable drawPath
  main-is:             drawPath.hs
  build-depends:       base >=4.7 && < 5,
                       diagrams-cairo,
                       diagrams-heatmap,
                       diagrams-lib,
                       colour,
                       IntervalMap,
                       palette,lens

  hs-source-dirs:      tests
  default-language:    Haskell2010
