name:                diagrams-heatmap
version:             0.1.0.0
synopsis:            Hierarchical Clustering Heatmaps
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Boyun Tang
maintainer:          tangboyun@hotmail.com
stability:           alpha
-- copyright:           
category:            Bioinformatics, Graphics
build-type:          Simple
Cabal-version:       >= 1.18
data-files:          

library
  hs-source-dirs:      src

  exposed-modules:     Diagrams.HeatMap
                       Diagrams.HeatMap.Type
                       Diagrams.HeatMap.Internal
  
  other-modules:       Diagrams.HeatMap.Module
                       Diagrams.HeatMap.Impl
                       Diagrams.HeatMap.Unsafe
                       Diagrams.HeatMap.Dendrogram
                       
  build-depends:       base,
                       cairo ,
                       colour,
                       diagrams-lib >= 1.3 ,
                       directory,
                       hierarchical-clustering,
                       split,
                       text ,
                       vector,
                       unordered-containers,
                       lens,
                       IntervalMap,
                       palette,
                       data-default-class
                       
  ghc-options:         -Wall
  default-language:    Haskell2010
                       
executable colorBar
  main-is:             colorBar.hs
  build-depends:       base >=4.7 && < 5,
                       diagrams-cairo,
                       diagrams-heatmap,
                       diagrams-lib,
                       colour,
                       IntervalMap,
                       palette

  hs-source-dirs:      tests
  default-language:    Haskell2010

executable mkHeatmap
  main-is:             mkHeatmap.hs
  build-depends:       base,
                       text,
                       filepath,
                       diagrams-cairo,
                       diagrams-heatmap,
                       diagrams-lib,
                       colour,
                       unordered-containers,
                       statistics,
                       vector,
                       palette

  hs-source-dirs:      tests
  default-language:    Haskell2010

